[gd_scene load_steps=24 format=3 uid="uid://dqmbhtd1nghrs"]

[ext_resource type="Script" path="res://entities/heroes/common/base_hero.gd" id="1_vaswu"]
[ext_resource type="Script" path="res://entities/heroes/common/status_label.gd" id="3_qduua"]
[ext_resource type="PackedScene" uid="uid://dxukvbn3aiys5" path="res://entities/paper.tscn" id="4_54hav"]
[ext_resource type="Script" path="res://entities/heroes/common/states/hero_state_manager.gd" id="5_xogyf"]
[ext_resource type="Script" path="res://entities/heroes/common/states/idle_state.gd" id="6_umsh3"]
[ext_resource type="Script" path="res://entities/heroes/common/states/move_state.gd" id="7_0arju"]
[ext_resource type="Script" path="res://entities/heroes/common/states/fall_state.gd" id="8_lemy6"]
[ext_resource type="Script" path="res://entities/heroes/common/states/cast_state.gd" id="9_ninn8"]
[ext_resource type="Script" path="res://entities/heroes/common/states/death_state.gd" id="10_8c41r"]
[ext_resource type="Script" path="res://entities/heroes/common/hero_unit_manager.gd" id="10_qqqta"]
[ext_resource type="Script" path="res://entities/heroes/common/states/channel_state.gd" id="11_qs2pe"]
[ext_resource type="Script" path="res://entities/heroes/common/hero_status_manager.gd" id="12_w46rw"]
[ext_resource type="Script" path="res://entities/heroes/common/hero_movement.gd" id="13_aiud7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nag1g"]
height = 36.0
radius = 12.0

[sub_resource type="CylinderMesh" id="CylinderMesh_1q0os"]
top_radius = 12.0
bottom_radius = 12.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_okujh"]
resource_local_to_scene = true
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="TorusMesh" id="TorusMesh_eldxs"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_okujh")
inner_radius = 13.0
outer_radius = 15.0

[sub_resource type="CylinderMesh" id="CylinderMesh_v2fqt"]
resource_local_to_scene = true
top_radius = 4.0
bottom_radius = 4.0
height = 0.001

[sub_resource type="FontFile" id="FontFile_3qmkq"]
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/500/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/1000/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/1200/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/2000/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/500/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/1000/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/1200/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2000/0 = Vector2(0, 0)
cache/0/500/0/ascent = 0.0
cache/0/500/0/descent = 0.0
cache/0/500/0/underline_position = 0.0
cache/0/500/0/underline_thickness = 0.0
cache/0/500/0/scale = 1.0
cache/0/500/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/500/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/500/0/kerning_overrides/500/0 = Vector2(0, 0)
cache/0/500/0/kerning_overrides/1000/0 = Vector2(0, 0)
cache/0/500/0/kerning_overrides/1200/0 = Vector2(0, 0)
cache/0/500/0/kerning_overrides/2000/0 = Vector2(0, 0)
cache/0/1000/0/ascent = 0.0
cache/0/1000/0/descent = 0.0
cache/0/1000/0/underline_position = 0.0
cache/0/1000/0/underline_thickness = 0.0
cache/0/1000/0/scale = 1.0
cache/0/1000/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/1000/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/1000/0/kerning_overrides/500/0 = Vector2(0, 0)
cache/0/1000/0/kerning_overrides/1000/0 = Vector2(0, 0)
cache/0/1000/0/kerning_overrides/1200/0 = Vector2(0, 0)
cache/0/1000/0/kerning_overrides/2000/0 = Vector2(0, 0)
cache/0/1200/0/ascent = 0.0
cache/0/1200/0/descent = 0.0
cache/0/1200/0/underline_position = 0.0
cache/0/1200/0/underline_thickness = 0.0
cache/0/1200/0/scale = 1.0
cache/0/1200/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/1200/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/1200/0/kerning_overrides/500/0 = Vector2(0, 0)
cache/0/1200/0/kerning_overrides/1000/0 = Vector2(0, 0)
cache/0/1200/0/kerning_overrides/1200/0 = Vector2(0, 0)
cache/0/1200/0/kerning_overrides/2000/0 = Vector2(0, 0)
cache/0/2000/0/ascent = 0.0
cache/0/2000/0/descent = 0.0
cache/0/2000/0/underline_position = 0.0
cache/0/2000/0/underline_thickness = 0.0
cache/0/2000/0/scale = 1.0
cache/0/2000/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/2000/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2000/0/kerning_overrides/500/0 = Vector2(0, 0)
cache/0/2000/0/kerning_overrides/1000/0 = Vector2(0, 0)
cache/0/2000/0/kerning_overrides/1200/0 = Vector2(0, 0)
cache/0/2000/0/kerning_overrides/2000/0 = Vector2(0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_ai7x0"]
size = Vector2(40, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkdvh"]
bg_color = Color(0.0470588, 0.0470588, 0.0470588, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45gxt"]
resource_local_to_scene = true
bg_color = Color(0.701961, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="ViewportTexture" id="ViewportTexture_5agar"]
viewport_path = NodePath("HealthBar/SubViewport")

[node name="Hero" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_vaswu")

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18, 0)
shape = SubResource("CylinderShape3D_nag1g")

[node name="Base" type="Node3D" parent="."]

[node name="Circle" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_1q0os")
skeleton = NodePath("")

[node name="Ring" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("TorusMesh_eldxs")
skeleton = NodePath("")

[node name="TargetLine" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CylinderMesh_v2fqt")
skeleton = NodePath("../..")

[node name="Paper" parent="." instance=ExtResource("4_54hav")]
transform = Transform3D(64, 0, 0, 0, 64, 0, 0, 0, 64, 0, 14, -4)

[node name="StatusLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 38.8783, -32.2845)
outline_modulate = Color(0, 0.552941, 0.913725, 1)
font = SubResource("FontFile_3qmkq")
font_size = 2000
outline_size = 127
script = ExtResource("3_qduua")

[node name="Bar" type="MeshInstance3D" parent="StatusLabel"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, -8.86602, -0.202503)
mesh = SubResource("PlaneMesh_ai7x0")
skeleton = NodePath("../..")

[node name="UnitManager" type="Node3D" parent="."]
script = ExtResource("10_qqqta")

[node name="StateManager" type="Node3D" parent="." node_paths=PackedStringArray("starting_state", "idle_state", "move_state", "fall_state", "cast_state", "channel_state", "death_state")]
script = ExtResource("5_xogyf")
starting_state = NodePath("Idle")
idle_state = NodePath("Idle")
move_state = NodePath("Move")
fall_state = NodePath("Fall")
cast_state = NodePath("Cast")
channel_state = NodePath("Channel")
death_state = NodePath("Death")

[node name="Idle" type="Node3D" parent="StateManager"]
script = ExtResource("6_umsh3")

[node name="Move" type="Node3D" parent="StateManager"]
script = ExtResource("7_0arju")

[node name="Fall" type="Node3D" parent="StateManager"]
script = ExtResource("8_lemy6")

[node name="Cast" type="Node3D" parent="StateManager"]
script = ExtResource("9_ninn8")

[node name="Death" type="Node3D" parent="StateManager"]
script = ExtResource("10_8c41r")

[node name="Channel" type="Node3D" parent="StateManager"]
script = ExtResource("11_qs2pe")

[node name="StateLabel" type="Label3D" parent="StateManager"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 19.2479, -11)
outline_modulate = Color(1, 0, 0, 1)
text = "Idle"
font = SubResource("FontFile_3qmkq")
font_size = 2000
outline_size = 127

[node name="StatusManager" type="Node3D" parent="."]
script = ExtResource("12_w46rw")

[node name="Movement" type="Node3D" parent="."]
script = ExtResource("13_aiud7")

[node name="MovingTowardsVoidCheck" type="Node3D" parent="Movement"]

[node name="RayCast3D" type="RayCast3D" parent="Movement/MovingTowardsVoidCheck"]
target_position = Vector3(0, -2, 0)
collision_mask = 2

[node name="RayCast3D2" type="RayCast3D" parent="Movement/MovingTowardsVoidCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)
target_position = Vector3(0, -2, 0)
collision_mask = 2

[node name="RayCast3D3" type="RayCast3D" parent="Movement/MovingTowardsVoidCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16)
target_position = Vector3(0, -2, 0)
collision_mask = 2

[node name="HealthBar" type="Node3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 2, 3.4641, 0, -3.4641, 2, 0, 31, -19)

[node name="SubViewport" type="SubViewport" parent="HealthBar"]
disable_3d = true
transparent_bg = true
size = Vector2i(1024, 192)

[node name="HealthBar" type="ProgressBar" parent="HealthBar/SubViewport"]
custom_minimum_size = Vector2(4, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -96.0
offset_right = 512.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_pkdvh")
theme_override_styles/fill = SubResource("StyleBoxFlat_45gxt")
max_value = 20.0
step = 1.0
value = 20.0

[node name="HealthLabel" type="Label" parent="HealthBar/SubViewport/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 240
text = "20 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="ViewportTexture" type="Sprite3D" parent="HealthBar"]
texture = SubResource("ViewportTexture_5agar")
